--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ _autosave-*
 *-save.pro
 *-save.kicad_pcb
 fp-info-cache
+*.rpt
 
 # Netlist files (exported from Eeschema)
 *.net
@@ -23,4 +24,10 @@ fp-info-cache
 
 # Exported BOM files
 *.xml
-*.csv
+
+# Solidworks
+*.SLDPRT
+*.SLDASM
+*.SLDBLK
+
+*.zip
